hphp/test/zend/good/ext-date/bug33562.php
<?php
date_default_timezone_set("GMT");
echo "[", date(""), "]\n";
echo "done";
?>