hphp/test/zend/bad/ext/zlib/tests/bug55544-win.php
<?php
$_ENV[HTTP_ACCEPT_ENCODING] = gzip;

echo "hi";
?>